# databricks-genie-workbench

./: .databricksignore  .env.deploy.template  .env.example  .gitignore  .gitleaksignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CUJ.md  OPTIMIZE_PLAN.md  README.md  agents.yaml  app.yaml  databricks.yml  deploy-config.sh  deploy.sh  mlflow.db  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: genie-space-optimizer-replay.yml
TODO/: gso-deep-integration.md  obo-auth-migration.md  scanner-gap-analysis.md
agents/_shared/: __init__.py  auth_bridge.py  lakebase_client.py  sp_fallback.py
agents/analyzer/: app.py  app.yaml
agents/creator/: app.py  app.yaml  schemas.py
agents/fixer/: app.py  app.yaml
agents/optimizer/: app.py  app.yaml
agents/scorer/: app.py  app.yaml
agents/supervisor/: proxy.py
backend/: _telemetry.py  genie_creator.py  main.py  maturity_config_default.yaml  models.py  prompts.py  sql_executor.py  synthesizer.py
backend/prompts/: _core.py  _data_sources.py  _requirements.py
backend/prompts_create/: __init__.py  _backtracking.py  _core.py  _create.py  _data_sources.py  (+8 more)
docs/: 00-index.md  01-introduction.md  02-architecture-overview.md  03-authentication-and-permissions.md  04-create-agent.md  05-iq-scanner.md  06-fix-agent.md  07-auto-optimize.md  08-deployment-guide.md  09-operations-guide.md  architecture-proposal.md  checklist-by-schema.md  genie-space-maturity.md  genie-space-schema.md  genierx-spec.md  gsl-instruction-schema.md  gso-architecture.md  gso-claude-code-playbook.md  gso-migration-guide.md  lessons_learnt.md  log.md  non-cli-install.md  rfc-ai-dev-kit-integration.md  web-terminal-install.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
jobs/: score_all_spaces.py
notebooks/: grant_app_permissions.py  install.py
scripts/: build.sh  deploy-config.sh  deploy.sh  ensure_gso_job.py  grant_permissions.py  install.sh  preflight.sh  setup_lakebase.py  setup_lakebase.sh  setup_synced_tables.py  setup_workbench.py  test.sh
sql/: setup_lakebase.sql
tests/: test_compaction_400.py  test_e2e_deployed.py  test_e2e_local.py  test_full_schema.py  test_inspection_loop.py  test_maturity_config.py  test_maturity_scoring.py
(+130 files in other folders)
